fixed oval bug on mobile

--- a/src/components/ColorPicker/ColorPicker.module.css
+++ b/src/components/ColorPicker/ColorPicker.module.css
@@ -17,3 +17,11 @@
   opacity: 0.85;
   cursor: pointer;
 }
+
+@media only screen and (max-width: 600px) {
+  .button {
+    width: 50px;
+    height: 52px;
+    border-radius: 50%;
+  }
+}
